src/parse/snapshots/blis__parse__lexer__tests__test_programs__err_runtime__bad_math_2.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "println(1 + 2.0);\n"
input_file: test_programs/err_runtime/bad_math_2.blis
---
[
  Lexeme(
    token: Identifier,
    text: "println",
    line: 1,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 1,
  ),
  Lexeme(
    token: Integer,
    text: "1",
    line: 1,
  ),
  Lexeme(
    token: Plus,
    text: "+",
    line: 1,
  ),
  Lexeme(
    token: Float,
    text: "2.0",
    line: 1,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 1,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 1,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 2,
  ),
]
